--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "test:headed": "playwright test --headed",
     "test:ui": "playwright test --ui",
     "test:debug": "playwright test --debug",
+    "test:chromium": "playwright test --project=chromium",
+    "test:firefox": "playwright test --project=firefox",
+    "test:webkit": "playwright test --project=webkit",
+    "test:chromium:headed": "playwright test --project=chromium --headed",
+    "test:firefox:headed": "playwright test --project=firefox --headed",
+    "test:webkit:headed": "playwright test --project=webkit --headed",
     "install-browsers": "playwright install"
   },
   "keywords": ["playwright", "automation", "testing"],
