--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,7 +24,17 @@ jobs:
       run: npx playwright install --with-deps
       
     - name: Run Playwright tests
+      env:
+        CI: true
       run: npm test
+      
+    - name: List test results
+      if: always()
+      run: |
+        echo "=== Test Results Directory ==="
+        ls -la test-results/ || echo "No test-results directory found"
+        echo "=== Playwright Report Directory ==="
+        ls -la playwright-report/ || echo "No playwright-report directory found"
       
     - uses: actions/upload-artifact@v4
       if: always()
