--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "test:webkit:headed": "playwright test --project=webkit --headed",
     "install-browsers": "playwright install"
   },
-  "keywords": ["playwright", "automation", "testing"],
+  "keywords": [
+    "playwright",
+    "automation",
+    "testing"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.40.0"
+    "@playwright/test": "^1.40.0",
+    "@types/node": "^24.3.0"
   }
 }
